Fix alignment (Attempt 4)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,8 +5,8 @@ body{
 header{
     background-color: lavender;
     color: rgb(128, 92, 136);
-    /* text-align: center;
-    margin: 0 auto; */
+    text-align: center;
+    margin: 0 auto;
     font-family: 'Times New Roman', Times, serif;
     font-size: 40px;
 }
